--- a/index.html
+++ b/index.html
@@ -452,55 +452,11 @@
                 </p>
             </div>
 
-            <div class="bg-white rounded-2xl p-8 shadow-2xl max-w-md mx-auto">
-                <h3 class="text-2xl font-extrabold text-gray-900 mb-6">Creează cont gratuit</h3>
-                <form class="space-y-4">
-                    <div class="text-left">
-                        <label class="block text-xs font-bold uppercase tracking-wider mb-2 text-gray-500">Numele Tău</label>
-                        <input type="text" required placeholder="ex. Maria Popescu" class="w-full bg-gray-50 border border-gray-200 rounded-xl px-4 py-3 text-sm text-gray-800 focus:border-brand-primary focus:outline-none focus:ring-2 focus:ring-brand-primary/20">
-                    </div>
-
-                    <div class="text-left">
-                        <label class="block text-xs font-bold uppercase tracking-wider mb-2 text-gray-500">Email</label>
-                        <input type="email" required placeholder="nume@email.com" class="w-full bg-gray-50 border border-gray-200 rounded-xl px-4 py-3 text-sm text-gray-800 focus:border-brand-primary focus:outline-none focus:ring-2 focus:ring-brand-primary/20">
-                    </div>
-
-                    <div class="text-left">
-                        <label class="block text-xs font-bold uppercase tracking-wider mb-2 text-gray-500">Telefon (WhatsApp)</label>
-                        <div class="relative">
-                            <span class="absolute left-4 top-3.5 font-bold text-sm text-gray-500">+40</span>
-                            <input type="tel" required placeholder="7xx xxx xxx" class="w-full pl-14 bg-gray-50 border border-gray-200 rounded-xl px-4 py-3 text-sm text-gray-800 focus:border-brand-primary focus:outline-none focus:ring-2 focus:ring-brand-primary/20">
-                        </div>
-                    </div>
-
-                    <div class="text-left">
-                        <label class="block text-xs font-bold uppercase tracking-wider mb-2 text-gray-500">Parolă</label>
-                        <input type="password" required placeholder="••••••••" class="w-full bg-gray-50 border border-gray-200 rounded-xl px-4 py-3 text-sm text-gray-800 focus:border-brand-primary focus:outline-none focus:ring-2 focus:ring-brand-primary/20">
-                    </div>
-
-                    <button type="submit" class="w-full bg-brand-primary text-white py-4 rounded-xl font-bold text-base shadow-lg hover:bg-brand-primary-dark transition-all hover:shadow-xl flex items-center justify-center gap-2">
-                        <span class="material-icons-round">person_add</span>
-                        Înregistrează-te Gratuit
-                    </button>
-
-                    <div class="relative my-6">
-                        <div class="absolute inset-0 flex items-center">
-                            <div class="w-full border-t border-gray-200"></div>
-                        </div>
-                        <div class="relative flex justify-center text-sm">
-                            <span class="px-3 text-xs uppercase font-semibold text-gray-400 bg-white">sau</span>
-                        </div>
-                    </div>
-
-                    <button type="button" class="w-full bg-white border-2 border-gray-200 py-4 rounded-xl font-bold text-base hover:border-brand-primary transition-all flex items-center justify-center gap-3">
-                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" class="w-6 h-6">
-                        <span class="text-gray-900">Continuă cu Google</span>
-                    </button>
-                </form>
-
-                <p class="text-xs text-gray-500 mt-6 leading-relaxed">
-                    Înregistrându-te, ești de acord cu termenii și condițiile platformei Corbeanca Community.
-                </p>
+            <div>
+                <a href="app.html" class="bg-white text-brand-primary px-8 py-4 rounded-xl font-bold text-lg hover:bg-gray-100 transition-all shadow-lg hover:shadow-xl flex items-center gap-2 justify-center mx-auto">
+                    <span class="material-icons-round">person_add</span>
+                    Creează Cont Gratuit
+                </a>
             </div>
         </div>
     </section>
