--- a/app.html
+++ b/app.html
@@ -166,11 +166,11 @@
                         <span class="material-icons-round" style="font-size: 18px;">event</span>
                         Evenimente
                     </button>
-                    <button onclick="filterPosts('interes-local')" data-category="local" class="category-pill flex-shrink-0 px-4 py-2.5 rounded-full font-bold text-sm transition-all bg-white border border-gray-200 text-gray-700 hover:border-gray-300 flex items-center gap-1.5">
+                    <button onclick="filterPosts('local')" data-category="local" class="category-pill flex-shrink-0 px-4 py-2.5 rounded-full font-bold text-sm transition-all bg-white border border-gray-200 text-gray-700 hover:border-gray-300 flex items-center gap-1.5">
                         <span class="material-icons-round" style="font-size: 18px;">location_on</span>
                         Interes Local
                     </button>
-                    <button onclick="filterPosts('afaceri-locale')" data-category="business" class="category-pill flex-shrink-0 px-4 py-2.5 rounded-full font-bold text-sm transition-all bg-white border border-gray-200 text-gray-700 hover:border-gray-300 flex items-center gap-1.5">
+                    <button onclick="filterPosts('business')" data-category="business" class="category-pill flex-shrink-0 px-4 py-2.5 rounded-full font-bold text-sm transition-all bg-white border border-gray-200 text-gray-700 hover:border-gray-300 flex items-center gap-1.5">
                         <span class="material-icons-round" style="font-size: 18px;">business</span>
                         Afaceri Locale
                     </button>
@@ -191,8 +191,8 @@
                     <option value="all">Toate</option>
                     <option value="sale">Bazar</option>
                     <option value="event">Evenimente</option>
-                    <option value="interes-local">Interes Local</option>
-                    <option value="afaceri-locale">Afaceri Locale</option>
+                    <option value="local">Interes Local</option>
+                    <option value="business">Afaceri Locale</option>
                     <option value="recommendation">Recomandări</option>
                     <option value="borrow">Împrumut</option>
                 </select>
